// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical ukrainian/ukraine_in_russian IDX page A11y I can see the skip to content link 1`] = `"Перейти до змісту"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=94&amp;p=ukrainian.ukraine_in_russian.page&amp;x1=[urn%3Abbc%3Acps%3A40c7c53a-ba2e-8679-e050-380a4e807947]&amp;x2=[responsive]&amp;x3=[news-ukrainian]&amp;x4=[ru]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[%D0%A0%D0%A3%D0%A1%2520-%2520BBC%2520News%2520%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0]&amp;x11=[2016-11-22T07%3A16%3A56.000Z]&amp;x12=[2022-02-24T13%3A24%3A42.000Z]"/>"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Україна",
  "url": "/ukrainian",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 2`] = `
{
  "text": "Чому BBC заслуговує на довіру",
  "url": "https://www.bbc.com/ukrainian/institutional-50170368",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 3`] = `
{
  "text": "Правила користування",
  "url": "https://www.bbc.com/ukrainian/institutional-38144387",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 4`] = `
{
  "text": "Особисті дані",
  "url": "https://www.bbc.com/ukrainian/institutional-38144827",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 5`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 6`] = `
{
  "text": "Напишіть на ВВС",
  "url": "https://www.bbc.co.uk/ukrainian/send/u50853885",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 7`] = `
{
  "text": "Ознайомтеся з нашими правилами зовнішніх посилань.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/ukrainian"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. BBC не несе відповідальності за контент інших сайтів. Ознайомтеся з нашими правилами зовнішніх посилань."`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Footer lang code should match text 1`] = `null`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header I can see the branding 1`] = `"BBC News, Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 1`] = `
{
  "text": "Головна",
  "url": "/ukrainian",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 2`] = `
{
  "text": "Війна з Росією",
  "url": "/ukrainian/topics/czp6w66edqpt",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 3`] = `
{
  "text": "Історії",
  "url": "/ukrainian/53725237",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 4`] = `
{
  "text": "Відео",
  "url": "/ukrainian/55425840",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 5`] = `
{
  "text": "Книга року BBC",
  "url": "/ukrainian/features-50320117",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 6`] = `
{
  "text": "Подкасти",
  "url": "/ukrainian/podcasts/p09jsy3h",
}
`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Header lang code should match text 1`] = `null`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page Main heading should match text 1`] = `"Помилка серверу"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Canonical link 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Heading level 1 1`] = `"Помилка серверу"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Lang attribute 1`] = `"uk"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG description 1`] = `"Новости BBC News Україна на русском"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG image alt 1`] = `"BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG locale 1`] = `"ru_UA"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG site name 1`] = `"BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG title 1`] = `"РУС - BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG type 1`] = `"website"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO OG url 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Page title 1`] = `"Помилка серверу - BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter creator 1`] = `"@BBC_ua"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter description 1`] = `"Помилка серверу"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter image alt 1`] = `"BBC News Україна"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter site 1`] = `"@BBC_ua"`;

exports[`Canonical ukrainian/ukraine_in_russian IDX page SEO Twitter title 1`] = `"Помилка серверу - BBC News Україна"`;
